PappersConnecterSalesforce/force-app/main/default/objects/Cartographie__c/Cartographie__c.object-meta.xml
<CustomObject>
    <label>Cartographie</label>
    <nameField>
        <label>Cartographie Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Cartographies</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>