PappersConnecterSalesforce/force-app/main/default/objects/Cartographie__c/fields/Entreprise_Code__c.field-meta.xml
<CustomField>
    <fullName>Entreprise_Code__c</fullName>
    <label>Entreprise Code</label>
    <length>10</length>
    <type>Text</type>
</CustomField>