PappersConnecterSalesforce/force-app/main/default/objects/Cartographie__c/fields/SIREN__c.field-meta.xml
<CustomField>
    <fullName>SIREN__c</fullName>
    <label>SIREN</label>
    <length>30</length>
    <type>Text</type>
</CustomField>